--- a/Template Main/blog-single-sidebar.html
+++ b/Template Main/blog-single-sidebar.html
@@ -225,7 +225,7 @@
 					<div class="col-12">
 						<div class="bread-inner">
 							<ul class="bread-list">
-								<li><a href="index1.html">Home<i class="ti-arrow-right"></i></a></li>
+								<li><a href="index.html">Home<i class="ti-arrow-right"></i></a></li>
 								<li class="active"><a href="blog-single.html">Blog Single Sidebar</a></li>
 							</ul>
 						</div>
@@ -468,7 +468,7 @@
 						<!-- Single Widget -->
 						<div class="single-footer about">
 							<div class="logo">
-								<a href="index.html"><img src="images/logo2.png" alt="#"></a>
+								<a href="index.html"><h3 class="text-white">Cloth-Mart</h3></a>
 							</div>
 							<p class="text">Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue,  magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
 							<p class="call">Got Question? Call us 24/7<span><a href="tel:123456789">+8801886695760</a></span></p>
