--- a/checkout.html
+++ b/checkout.html
@@ -188,7 +188,7 @@
 										<div class="navbar-collapse">	
 											<div class="nav-inner">	
 												<ul class="nav main-menu menu navbar-nav">
-													<li class="active"><a href="#">Home</a></li>
+													<li class="active"><a href="./index.html">Home</a></li>
 													<li><a href="#">Product</a></li>												
 													<li><a href="#">Service</a></li>
 													<li><a href="#">Shop<i class="ti-angle-down"></i><span class="new">New</span></a>
@@ -226,7 +226,7 @@
 					<div class="col-12">
 						<div class="bread-inner">
 							<ul class="bread-list">
-								<li><a href="index1.html">Home<i class="ti-arrow-right"></i></a></li>
+								<li><a href="./index.html">Home<i class="ti-arrow-right"></i></a></li>
 								<li class="active"><a href="blog-single.html">Checkout</a></li>
 							</ul>
 						</div>
@@ -647,7 +647,7 @@
 						<div class="single-service">
 							<i class="ti-reload"></i>
 							<h4>Free Return</h4>
-							<p>Within 30 days returns</p>
+							<p>Within 3 days returns</p>
 						</div>
 						<!-- End Single Service -->
 					</div>
