--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 						<div class="col-lg-2 col-md-2 col-12">
 							<!-- Logo -->
 							<div class="logo">
-								<a href="index.html">Cloth-Mart</a>
+								<a href="index.html"><h3>Cloth-Mart</h3></a>
 							</div>
 							<!--/ End Logo -->
 							<!-- Search Form -->
@@ -190,7 +190,7 @@
 										<div class="navbar-collapse">	
 											<div class="nav-inner">	
 												<ul class="nav main-menu menu navbar-nav">
-													<li class="active"><a href="#">Home</a></li>
+													<li class="active"><a href="./index.html">Home</a></li>
 													<li><a href="#">Product</a></li>												
 													<li><a href="#">Service</a></li>
 													<li><a href="#">Shop<i class="ti-angle-down"></i><span class="new">New</span></a>
