--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 												</div>
 											</li>
 											<li class="single-menu">
-												<a href="#" class="title-link">Shop Women's</a>
+												<a href="#" class="title-link">Shop Men's</a>
 												<div class="image">
 													<img src="https://via.placeholder.com/225x155" alt="#">
 												</div>
@@ -270,7 +270,7 @@
 										<div class="nav-inner">
 											<ul class="nav main-menu menu navbar-nav">
 												<li class="active"><a href="./index.html">Home</a></li>
-												<li><a href="#">Product</a></li>
+												<li><a href="./product-details.html">Product</a></li>
 												<li><a href="#">Service</a></li>
 												<li><a href="#">Shop<i class="ti-angle-down"></i><span
 															class="new">New</span></a>
@@ -394,7 +394,7 @@
 							<ul class="nav nav-tabs" id="myTab" role="tablist">
 								<li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#man"
 										role="tab">Man</a></li>
-								<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#women"
+								<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Men"
 										role="tab">Woman</a></li>
 								<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#kids"
 										role="tab">Kids</a></li>
@@ -439,7 +439,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Hot Collection</a></h3>
+													<h3><a href="product-details.html">Men Hot Collection</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -542,7 +542,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Pant Collectons</a></h3>
+													<h3><a href="product-details.html">Men Pant Collectons</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -611,7 +611,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Awesome Cap For Women</a></h3>
+													<h3><a href="product-details.html">Awesome Cap For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -645,7 +645,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Polo Dress For Women</a></h3>
+													<h3><a href="product-details.html">Polo Dress For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -680,7 +680,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Black Sunglass For Women</a></h3>
+													<h3><a href="product-details.html">Black Sunglass For Men</a></h3>
 													<div class="product-price">
 														<span class="old">৳ 500.00</span>
 														<span>৳ 400.00</span>
@@ -693,7 +693,7 @@
 							</div>
 							<!--/ End Single Tab -->
 							<!-- Start Single Tab -->
-							<div class="tab-pane fade" id="women" role="tabpanel">
+							<div class="tab-pane fade" id="Men" role="tabpanel">
 								<div class="tab-single">
 									<div class="row">
 										<div class="col-xl-3 col-lg-4 col-md-4 col-12">
@@ -723,7 +723,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Hot Collection</a></h3>
+													<h3><a href="product-details.html">Men Hot Collection</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -826,7 +826,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Pant Collectons</a></h3>
+													<h3><a href="product-details.html">Men Pant Collectons</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -895,7 +895,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Awesome Cap For Women</a></h3>
+													<h3><a href="product-details.html">Awesome Cap For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -929,7 +929,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Polo Dress For Women</a></h3>
+													<h3><a href="product-details.html">Polo Dress For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -964,7 +964,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Black Sunglass For Women</a></h3>
+													<h3><a href="product-details.html">Black Sunglass For Men</a></h3>
 													<div class="product-price">
 														<span class="old">৳ 500.00</span>
 														<span>৳ 400.00</span>
@@ -1007,7 +1007,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Hot Collection</a></h3>
+													<h3><a href="product-details.html">Men Hot Collection</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1110,7 +1110,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Pant Collectons</a></h3>
+													<h3><a href="product-details.html">Men Pant Collectons</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1179,7 +1179,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Awesome Cap For Women</a></h3>
+													<h3><a href="product-details.html">Awesome Cap For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1213,7 +1213,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Polo Dress For Women</a></h3>
+													<h3><a href="product-details.html">Polo Dress For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1248,7 +1248,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Black Sunglass For Women</a></h3>
+													<h3><a href="product-details.html">Black Sunglass For Men</a></h3>
 													<div class="product-price">
 														<span class="old">৳ 500.00</span>
 														<span>৳ 400.00</span>
@@ -1291,7 +1291,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Hot Collection</a></h3>
+													<h3><a href="product-details.html">Men Hot Collection</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1394,7 +1394,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Pant Collectons</a></h3>
+													<h3><a href="product-details.html">Men Pant Collectons</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1463,7 +1463,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Awesome Cap For Women</a></h3>
+													<h3><a href="product-details.html">Awesome Cap For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1497,7 +1497,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Polo Dress For Women</a></h3>
+													<h3><a href="product-details.html">Polo Dress For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1532,7 +1532,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Black Sunglass For Women</a></h3>
+													<h3><a href="product-details.html">Black Sunglass For Men</a></h3>
 													<div class="product-price">
 														<span class="old">৳ 500.00</span>
 														<span>৳ 400.00</span>
@@ -1575,7 +1575,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Hot Collection</a></h3>
+													<h3><a href="product-details.html">Men Hot Collection</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1678,7 +1678,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Pant Collectons</a></h3>
+													<h3><a href="product-details.html">Men Pant Collectons</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1747,7 +1747,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Awesome Cap For Women</a></h3>
+													<h3><a href="product-details.html">Awesome Cap For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1781,7 +1781,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Polo Dress For Women</a></h3>
+													<h3><a href="product-details.html">Polo Dress For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1816,7 +1816,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Black Sunglass For Women</a></h3>
+													<h3><a href="product-details.html">Black Sunglass For Men</a></h3>
 													<div class="product-price">
 														<span class="old">৳ 500.00</span>
 														<span>৳ 400.00</span>
@@ -1859,7 +1859,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Hot Collection</a></h3>
+													<h3><a href="product-details.html">Men Hot Collection</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -1962,7 +1962,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Women Pant Collectons</a></h3>
+													<h3><a href="product-details.html">Men Pant Collectons</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -2031,7 +2031,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Awesome Cap For Women</a></h3>
+													<h3><a href="product-details.html">Awesome Cap For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -2065,7 +2065,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Polo Dress For Women</a></h3>
+													<h3><a href="product-details.html">Polo Dress For Men</a></h3>
 													<div class="product-price">
 														<span>৳ 250.00</span>
 													</div>
@@ -2100,7 +2100,7 @@
 													</div>
 												</div>
 												<div class="product-content">
-													<h3><a href="product-details.html">Black Sunglass For Women</a></h3>
+													<h3><a href="product-details.html">Black Sunglass For Men</a></h3>
 													<div class="product-price">
 														<span class="old">৳ 500.00</span>
 														<span>৳ 400.00</span>
@@ -2141,7 +2141,7 @@
 					<div class="single-banner">
 						<img src="https://via.placeholder.com/600x370" alt="#">
 						<div class="content">
-							<p>shoes women</p>
+							<p>shoes Men</p>
 							<h3>mid season <br> up to <span>70%</span></h3>
 							<a href="#" class="btn">Shop Now</a>
 						</div>
@@ -2189,7 +2189,7 @@
 								</div>
 							</div>
 							<div class="product-content">
-								<h3><a href="product-details.html">Black Sunglass For Women</a></h3>
+								<h3><a href="product-details.html">Black Sunglass For Men</a></h3>
 								<div class="product-price">
 									<span class="old">৳ 500.00</span>
 									<span>৳ 400.00</span>
@@ -2219,7 +2219,7 @@
 								</div>
 							</div>
 							<div class="product-content">
-								<h3><a href="product-details.html">Women Hot Collection</a></h3>
+								<h3><a href="product-details.html">Men Hot Collection</a></h3>
 								<div class="product-price">
 									<span>৳ 400.00</span>
 								</div>
@@ -2556,7 +2556,7 @@
 						<img src="https://via.placeholder.com/370x300" alt="#">
 						<div class="content">
 							<p class="date">22 July, 2023. Monday</p>
-							<a href="#" class="title">Women Fashion Festive</a>
+							<a href="#" class="title">Men Fashion Festive</a>
 							<a href="#" class="more-btn">Continue Reading</a>
 						</div>
 					</div>
