--- a/index.html
+++ b/index.html
@@ -271,10 +271,16 @@
 											<ul class="nav main-menu menu navbar-nav">
 												<li class="active"><a href="./index.html">Home</a></li>
 												<li><a href="./product-details.html">Product</a></li>
+
+												 <!-- categoty li start -->
+												
+												<!-- category li end  -->
 												<li><a href="#">Service</a></li>
 												<li><a href="#">Shop<i class="ti-angle-down"></i><span
 															class="new">New</span></a>
 													<ul class="dropdown">
+
+
 														<li><a href="cart.html">Cart</a></li>
 														<li><a href="checkout.html">Checkout</a></li>
 													</ul>
@@ -2292,31 +2298,7 @@
 	</div>
 	<!-- End Most Popular Area -->
 
-	<section class="section free-version-banner">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-8 offset-md-2 col-xs-12">
-					<div class="section-title mb-60">
-						<span class="text-white wow fadeInDown" data-wow-delay=".2s"
-							style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInDown;">Cloth-Mart</span>
-						<h2 class="text-white wow fadeInUp" data-wow-delay=".4s"
-							style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Currently You
-							are using free<br> lite Version of Cloth-Mart.</h2>
-						<p class="text-white wow fadeInUp" data-wow-delay=".6s"
-							style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">Please,
-							purchase full version of the template to get all pages,<br> features and commercial license.
-						</p>
-
-						<div class="button">
-							<a href="https://wpthemesgrid.com/downloads/Cloth-Mart-ecommerce-html5-template/" target="_blank"
-								rel="nofollow" class="btn wow fadeInUp" data-wow-delay=".8s">Purchase Now</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
+	
 	<!-- Start Shop Home List  -->
 	<section class="shop-home-list section">
 		<div class="container">
@@ -2656,7 +2638,7 @@
 										Please, purchase full version of the template to get all pages, features and
 										commercial license</p>
 									<div class="button" style="margin-top:30px;">
-										<a href="https://wpthemesgrid.com/downloads/Cloth-Mart-ecommerce-html5-template/"
+										<a href="#"
 											target="_blank" class="btn" style="color:#fff;">Buy Now!</a>
 									</div>
 						</div>
